# pydicates

./: README.md  pyproject.toml
.github/workflows/: run_tests.yml
examples/: documents_check.py  simplest.py
pydicates/: __init__.py  exceptions.py  mixins.py  predicates.py
tests/: __init__.py  conftest.py  helpers.py  test_boolean.py  test_boolean_mixin.py  test_boolean_operations.py  test_comparison_mixin.py  test_comparison_operations.py  test_general.py  test_math_operations.py
