[tool.poetry]
name = "pydicates"
version = "0.1"
description = "Predicates for Python."
repository = "https://github.com/Tiendil/pydicates"
authors = ["Aliaksei Yaletski (Tiendil) <a.eletsky@gmail.com>"]
license = "BSD3"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6"
hypothesis = "^5"
typeguard = "^2"
pretty_errors = "^1"
